# mesagrid

./: .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  conf.py  index.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: documentation.yml
doc/: mesagrid.rst
docs/: Makefile  authors.rst  conf.py  contributing.rst  history.rst  index.rst  installation.rst  make.bat  mesagrid.rst  modules.rst  plotting.ipynb  preliminaries.md  quickstart.ipynb  thinfig  usage.rst
docs/.jupyter_cache/: global.db
docs/.jupyter_cache/executed/2eb7556659b9f1a5867460a1053b787d/: base.ipynb
docs/_static/: default.css
docs/work/: history_columns.list  inlist_project
docs/work/LOGS/: history.data  profile1.data  profile1.data.GYRE  profile10.data  profile10.data.GYRE  profile11.data  profile11.data.GYRE  profile2.data  profile2.data.GYRE  profile3.data  profile3.data.GYRE  profile4.data  profile4.data.GYRE  profile5.data  profile5.data.GYRE  profile6.data  profile6.data.GYRE  profile7.data  profile7.data.GYRE  profile8.data  profile8.data.GYRE  profile9.data  profile9.data.GYRE  profiles.index
mesagrid/: __init__.py  mesagrid.py  star.py  star_plots.py  testing.ipynb
tests/: __init__.py  test_mesagrid.py
