[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesagrid"
version = "0.1.8"
authors = [
  { name="Earl Patrick Bellinger", email="earl.bellinger@yale.edu" },
]
description = "Parse grids of MESA tracks and models"
readme = "README.rst"
requires-python = ">=3.6"
keywords = ["mesagrid"]
license = {file = "LICENSE"}
classifiers = [
        'Development Status :: 6 - Mature',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: MIT License',
        'Natural Language :: English',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Topic :: Scientific/Engineering :: Astronomy',
        'Topic :: Scientific/Engineering :: Physics',
]
dependencies = [
    "tomso >= 0.2.1",
    "pandas >= 1.3.4",
    "numpy >= 1.20.3",
    "tqdm >= 4.62.3",
    "matplotlib >= 3.4.3"
]

[project.urls]
homepage = "https://github.com/earlbellinger/mesagrid"
tracker = "https://github.com/earlbellinger/mesagrid/issues"
documentation = "https://mesagrid.readthedocs.io/"
